fixed header font-size/color/spacing and background color

--- a/style.css
+++ b/style.css
@@ -4,12 +4,50 @@
   font-family: "Roboto", serif;
 }
 
+body{
+  margin:0;
+}
+
 .navbar{
   display: flex;
   justify-content: space-between;
+  
  
 }
 
 img{
   max-width: 300px;
+}
+
+.first-container{
+  background-color:#1f2937;
+  padding-top:20px;
+  padding-left: 200px;
+}
+
+h1{
+  font-size: 48px;
+  font-weight: 900;
+  color:#f9faf8
+}
+
+.hero-subtext, a{
+  font-size:18px;
+  color:#e5e7eb
+}
+
+.leftnav{
+  font-size: 24px;
+  color:#f9faf8
+}
+
+.rightnav{
+  display:flex;
+  padding-right: 200px;
+  gap:20px;
+}
+
+a{
+  text-decoration: none;
+  
 }
